<resources>
    <string name="app_name">Самолётик Online</string>
    <string name="verification_email_sent">Письмо с подтверждением отправлено</string>
    <string name="update_email">Вы действительно хотите обновить e-mail адрес?</string>
    <string name="enter_new_email">Введите новый e-mail адрес</string>
    <string name="update">Обновить</string>
    <string name="required_field">Заполните поле</string>
    <string name="email_updated">E-mail адрес обновлен</string>
    <string name="exception">Авторизуйтесь и попробуйте вновь</string>
    <string name="cancel">Отмена</string>
    <string name="del_question">Удалить аккаунт навсегда?</string>
    <string name="sure_question">Вы уверены?</string>
    <string name="ok">ОК</string>
    <string name="account_del">Аккаунт удалён</string>
    <string name="logout">Выйти</string>
    <string name="reset_pswd">Сбросить пароль</string>
    <string name="update_mail">Изменить e-mail</string>
    <string name="delete_acc">Удалить аккаунт</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="register_success">Вы успешно зарегистрированы</string>
    <string name="forgot_pswd">Забыли пароль?</string>
    <string name="email">E-mail адрес</string>
    <string name="pswd">Пароль</string>
    <string name="reset_pswd_quest">Хотите сбросить пароль?</string>
    <string name="reset_link">Введите свой e-mail, чтобы получить ссылку для сброса пароля</string>
    <string name="reset">Сбросить</string>
    <string name="reset_email_sent">На Ваш e-mail отправлено письмо подтверждения</string>
    <string name="email_miss">Введите e-mail</string>
    <string name="pswd_miss">Введите пароль</string>
    <string name="name_miss">Введите имя</string>
    <string name="conf_pswd_miss">Подтвердите пароль</string>
    <string name="phone_miss">Введите номер телефона</string>
    <string name="CC_miss">Введите код страны</string>
    <string name="pswd_dont_match">Пароли не совпадают</string>
    <string name="data_validated">Данные сохранены</string>
    <string name="pswd_updated">Пароль успешно изменен</string>
    <string name="full_name">ФИО</string>
    <string name="save">Сохранить</string>
    <string name="new_pswd">Введите новый пароль</string>
    <string name="exception_pswd">Неверный e-mail или пароль</string>
    <string name="verify_email">Пожалуйста, подтвердите ваш e-mail</string>
    <string name="verify">Подтвердить</string>
    <string name="signin">Регистрация</string>
    <string name="or">или</string>
    <string name="phone_number">Номер телефона</string>
    <string name="CC">Код</string>
    <string name="login_phone">Войти по номеру телефона</string>
    <string name="regenerate_OTP">Вы можете отправить код заново только через 60 секунд.</string>
    <string name="resend">Отправить ещё раз</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_receive">Я не получил СМС код</string>
    <string name="enter_otp">Введите код, указанный в сообщении, которое мы отправили вам по указаному номеру</string>
    <string name="OTP_fail">Неверный код</string>
    <string name="error">Ошибка</string>
    <string name="teacher">Педагог</string>
    <string name="child">Ребёнок</string>
    <string name="phone_success">Аккаунт успешно создан и привязан к данному номеру</string>
    <string name="select_type">Выберите тип учетной записи</string>
    <string name="select_one_type">Поставьте галочку напротив только одного из вариантов</string>
    <string name="upload_notice">Загрузить заметку</string>
    <string name="upload_image">Загрузить изображение</string>
    <string name="upload_gallery">Загрузить изображение</string>
    <string name="upload_doc">Загрузить документ</string>
    <string name="group">Группы</string>
    <string name="del_notice">Удалить уведомление</string>
    <string name="select_image">Выберите изображение</string>
    <string name="notice_title">Заголовок</string>
    <string name="empty_field">Заполните поле</string>
    <string name="notice_upload">Публикация добавлена</string>
    <string name="uploading">Загрузка...</string>
    <string name="select_category">Выберите категорию</string>
    <string name="convocation">Собрание родителей</string>
    <string name="other_events">Другие события</string>
    <string name="pls_upl_im">Пожалуйста, выберите изображение</string>
    <string name="pls_select_cat">Пожайлуйста, выберите категорию</string>
    <string name="pls_select_doc">Пожалуйста, выберите документ</string>
    <string name="doc_fail">Не удалось загрузить документ</string>
    <string name="doc_success">Документ успешно загружен</string>
    <string name="image_uploaded">Изображение добавлено</string>
    <string name="select_doc">Выберите документ</string>
    <string name="no_file">Файл не выбран</string>
    <string name="wait">Пожалуйста подождите...</string>
    <string name="home">Домой</string>
    <string name="notice">Заметки</string>
    <string name="gallery">Галерея</string>
    <string name="docs">Документы</string>
    <string name="profile">Профиль</string>
    <string name="start">Старт</string>
    <string name="close">Закрыть</string>
    <string name="your_name">Ваше имя</string>
    <string name="change_profile">Редактировать профиль</string>
    <string name="entr_group_name">Введите название группы</string>
    <string name="description">Описание</string>
    <string name="send_request">Отправить заявку</string>
    <string name="decline">Отменить заявку</string>
    <string name="cancel_request">Запрос отменен</string>
    <string name="req_sent">Запрос на вступление в группу отправлен</string>
    <string name="user_added">Пользователь добавлен</string>
    <string name="cancel_user_req">Отклонить заявку</string>
    <string name="del_from_group">Выйти из группы</string>
    <string name="accept_request">Принять заявку</string>
    <string name="decline_req">Заявка отклонена</string>
    <string name="delete_user">Удалить из группы</string>
    <string name="groups">Группы</string>
    <string name="user_deleted">Пользователь удален из группы</string>
    <string name="requests">ЗАЯВКИ</string>
    <string name="group_material">МАТЕРИАЛЫ</string>
    <string name="enter_task">Создайте задание</string>
    <string name="pls_write_smth">Пожалуйста, напишите что-нибудь для публикации</string>
    <string name="post_added">Задание добавлено</string>
    <string name="enter_comment">Добавьте комментарий</string>
    <string name="comment_added">Комментарий добавлен</string>
    <string name="about">Рады приветствовать вас в мобильном приложении муниципального бюджетного дошкольного образовательного учреждения — детского сада № 209″!
    Всего детский сад посещают 314 ребёнка.
Воспитательно-образовательный процесс построен в соответствии с Основной образовательной программой дошкольного образования «От рождения до школы» под ред. Н.Е.Веракса и разработанной ООП МБДОУ № 209.
        В 2020-2021 учебном году в детском саду работает 13 групп:

2 — 1-й младший возраст (дети до 3 лет);
1 — 2-й младший возраст (3-4 года);

1 — средний возраст (4-5 лет);
1 — старшая группа (5-6 лет);
2 — подготовительные к школе группы (6-7 лет).

Также в нашем учреждении есть дошкольные группы коррекционного направления:

3 — для детей с ТНР (средняя, старшая и подготовительная);
1 — для детей с ЗПР (старшая);
2 — для детей с РАС (средняя, старшая).
    </string>
    <string name="telephone">Телефоны: 8 (8422) 54-03-68,  факс 8 (8422) 54-38-02.</string>
    <string name="email_home">E-mail: detsad209@mail.ru, dou209@mail.ru</string>
    <string name="website">Сайт: dou209.ru</string>
    <string name="worktime">Пятидневная рабочая неделя (понедельник — пятница) с 7.00 до 19.00.
Выходные дни: суббота, воскресенье и праздничные дни, установленные законодательством РФ.</string>

</resources>