<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <com.smarteist.autoimageslider.SliderLayout
               android:layout_width="match_parent"
               android:layout_height="250dp"
               android:id="@+id/slider"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="ДОБРО ПОЖАЛОВАТЬ!"
               android:layout_marginTop="36dp"
               android:textSize="30sp"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textColor"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/about"
               android:layout_marginTop="20dp"
               android:layout_marginHorizontal="15dp"
               android:textSize="20sp"
               android:layout_gravity="center_horizontal"
               android:textAlignment="center"
               android:textColor="@color/textColor"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="СВЯЗАТЬСЯ С НАМИ:"
               android:layout_marginTop="36dp"
               android:textSize="30sp"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textColor"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/telephone"
               android:layout_marginTop="20dp"
               android:layout_marginHorizontal="15dp"
               android:textSize="20sp"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textColor"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/email_home"
               android:layout_marginTop="20dp"
               android:layout_marginHorizontal="15dp"
               android:textSize="20sp"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textColor"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/website"
               android:layout_marginTop="20dp"
               android:layout_marginHorizontal="15dp"
               android:textSize="20sp"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textColor"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="РЕЖИМ РАБОТЫ:"
               android:layout_marginTop="36dp"
               android:textSize="30sp"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textColor"/>
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/worktime"
               android:layout_marginTop="20dp"
               android:layout_marginHorizontal="15dp"
               android:textSize="20sp"
               android:layout_gravity="center_horizontal"
               android:textColor="@color/textColor"/>


       </LinearLayout>
   </ScrollView>

</FrameLayout>