<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".VerifyPhone">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/im"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="35dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/enter_otp"
        android:textAlignment="center"
        android:textSize="14sp" />

    <com.chaos.view.PinView
        android:id="@+id/pinview"
        style="@style/PinWidget.PinView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:cursorVisible="true"
        android:inputType="number"
        android:textSize="18sp"
        app:itemCount="6"
        app:itemHeight="48dp"
        app:itemRadius="4dp"
        app:lineColor="#f56258"
        tools:ignore="MissingClass" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pinview"
        android:layout_marginTop="15dp"
        android:layout_marginRight="5dp"
        android:layout_toLeftOf="@+id/resend"
        android:text="@string/dont_receive"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pinview"
        android:layout_alignParentRight="true"
        android:layout_marginTop="15dp"
        android:layout_marginRight="45dp"
        android:text="@string/resend"
        android:textColor="#f56258"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/verifybutton"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_below="@id/pinview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#f56258"
        app:cardCornerRadius="20dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/verify"
            android:textColor="#fff"
            android:textSize="20sp" />
    </androidx.cardview.widget.CardView>
</RelativeLayout>