<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    tools:context=".UploadDocument">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:id="@+id/addDoc"
            app:cardElevation="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/circle_yellow"
                    android:padding="15dp"
                    android:src="@drawable/ic_document">

                </ImageView>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGray"
                    android:layout_marginTop="10dp">
                </View>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_doc"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="15sp"


                    android:padding="5dp"
                    android:textColor="@color/textColor">

                </TextView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:id="@+id/docTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_file"
            android:layout_gravity="center"
            android:textSize="16sp"/>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/docTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notice_title" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload_doc"
            android:layout_marginTop="16dp"
            android:textAllCaps="false"
            android:id="@+id/uploadDocBtn">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>

</ScrollView>